New View methods
Implement more handy methods for data manipulations:
- put(Model) -> Optionnal<Model>
- putMany(Iterable<Model>) -> Set<Model>
- delete<Model> -> Optional<Model>
- deleteMany<Iterable<Model>> -> Set<Model>
- deleteMany<Query> -> Set<Model>
- get<Model> -> Optional<Model>
- getMany<Iterable<Model>> -> Set<Model>
- getMany<Query> -> Set<Model>